--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -44,7 +44,7 @@ But try to actually do that work manually to get a feel for it.
 
 <div>
 <span>After the instruction, if you want to remember what you've just learned, then </span>
-<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Hooks%20%F0%9F%8E%A3&e=03%3A%20Lifting%20state&em=">
+<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Hooks%20%F0%9F%8E%A3&e=03%3A%20Lifting%20state&em=brassman@gmail.com">
   fill out the elaboration and feedback form.
 </a>
 </div>
